# f1rulesbot

./: Cargo.toml  Dockerfile  rustfmt.toml
.devcontainer/: setup.sh
.github/workflows/: build.yaml
migrations/: headings.sql
src/: commands.rs  main.rs  search_index.rs
src/commands/: cache.rs  not_implemented.rs  ping.rs  regs.rs
