[package]
name = "f1rulesbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.5"
lev_distance = "0.1.1"
serenity = { git = "https://github.com/serenity-rs/serenity", branch="current", features=[]}
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.145", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "time"] }
